@@ -1829,9 +1829,10 @@ static const struct dis386 x86_64_table[][2] = {
   },
 };
 
-static const struct dis386 three_byte_table[][32] = {
+static const struct dis386 three_byte_table[][256] = {
   /* THREE_BYTE_0 */
   {
+    /* 00 */
     { "pshufb",		MX, EM, XX, XX },
     { "phaddw",		MX, EM, XX, XX },
     { "phaddd",		MX, EM, XX, XX },
@@ -1840,6 +1841,7 @@ static const struct dis386 three_byte_table[][32] = {
     { "phsubw",		MX, EM, XX, XX },
     { "phsubd",		MX, EM, XX, XX },
     { "phsubsw",	MX, EM, XX, XX },
+    /* 08 */
     { "psignb",		MX, EM, XX, XX },
     { "psignw",		MX, EM, XX, XX },
     { "psignd",		MX, EM, XX, XX },
@@ -1848,6 +1850,7 @@ static const struct dis386 three_byte_table[][32] = {
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
+    /* 10 */
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
@@ -1856,6 +1859,7 @@ static const struct dis386 three_byte_table[][32] = {
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
+    /* 18 */
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
@@ -1863,10 +1867,263 @@ static const struct dis386 three_byte_table[][32] = {
     { "pabsb",		MX, EM, XX, XX },
     { "pabsw",		MX, EM, XX, XX },
     { "pabsd",		MX, EM, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 20 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 28 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 30 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 38 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 40 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 48 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 50 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 58 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 60 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 68 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 70 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 78 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 80 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 88 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 90 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 98 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* a0 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* a8 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* b0 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* b8 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* c0 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* c8 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* d0 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* d8 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* e0 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* e8 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* f0 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* f8 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX }
   },
   /* THREE_BYTE_1 */
   {
+    /* 00 */
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
@@ -1875,6 +2132,7 @@ static const struct dis386 three_byte_table[][32] = {
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
+    /* 08 */
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
@@ -1883,6 +2141,7 @@ static const struct dis386 three_byte_table[][32] = {
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
     { "palignr",	MX, EM, Ib, XX },
+    /* 10 */
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
@@ -1891,6 +2150,259 @@ static const struct dis386 three_byte_table[][32] = {
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
+    /* 18 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 20 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 28 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 30 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 38 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 40 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 48 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 50 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 58 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 60 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 68 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 70 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 78 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 80 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 88 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 90 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* 98 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* a0 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* a8 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* b0 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* b8 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* c0 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* c8 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* d0 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* d8 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* e0 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* e8 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* f0 */
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    { "(bad)",		XX, XX, XX, XX },
+    /* f8 */
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
     { "(bad)",		XX, XX, XX, XX },
